- Fixed problem where modopedia components may not be registered in time during neoforge datagen.