@@ -14,7 +14,7 @@ public class FormattedTextPage extends ScreenPage {
     protected final int textY;
     protected final List<TextChunk> landingText;
 
-    public FormattedTextPage(BookScreen parent, List<TextChunk> landingText, int textX, int textY) {
+    public FormattedTextPage(BookScreen<?> parent, List<TextChunk> landingText, int textX, int textY) {
         super(parent);
         this.textX = textX;
         this.textY = textY;
