@@ -1,5 +1,5 @@
 [versions]
-    modopedia = "1.1.1"
+    modopedia = "1.1.2"
 
 # Common
     minecraft = "1.21.1"
